--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -3,7 +3,7 @@
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">
-					<span class="sr-only">Toggile navigation</span>
+					<span class="sr-only">Toggle navigation</span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
@@ -11,6 +11,9 @@
 				<a href="{{pathFor 'postsList'}}" class="navbar-brand">Microscope</a>
 			</div>
 			<div class="collapse navbar-collapse" id="navigation">
+				<ul class="nav navbar-nav">
+					<li><a href="{{pathFor 'postSubmit'}}">Submit Post</a></li>
+				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					{{> loginButtons}}
 				</ul>
