--- a/client/templates/posts/post_submit.html
+++ b/client/templates/posts/post_submit.html
@@ -4,12 +4,14 @@
 			<label for="url" class="control-label">URL</label>
 			<div class="controls">
 				<input type="text" id="url" name="url" value="" placeholder="Your URL" class="form-control" />
+				<span class="help-block">{{errorMessage 'url'}}</span>
 			</div>
 		</div>
-		<div class="form-group">
+		<div class="form-group {{errorClass 'title'}}">
 			<label for="title" class="control-label">Title</label>
 			<div class="controls">
 				<input type="text" class="form-control" id="title" name="title" value="" placeholder="Name your post" />
+				<span class="help-block">{{errorMessage 'title'}}</span>
 			</div>
 		</div>
 		<input type="submit" class="btn btn-primary" value="Submit" />
