--- a/client/templates/posts/post_edit.html
+++ b/client/templates/posts/post_edit.html
@@ -1,19 +1,21 @@
 <template name="postEdit">
-	<form class="main form page">
-		<div class="form-group">
-			<label for="url" class="control-label">URL</label>
-			<div class="controls">
-				<input type="text" class="form-control" id="url" name="url" value="{{url}}" placeholder="Your URL" />
-			</div>
-		</div>
-		<div class="form-group">
-			<label for="title" class="control-label">Title</label>
-			<div class="controls">
-				<input type="text" class="form-control" id="title" name="title" value="{{title}}" placeholder="Name your post" />
-			</div>
-		</div>
-		<input type="submit" class="btn btn-primary submit" value="Submit" />
-		<hr/>
-		<a href="#" class="btn btn-danger delete">Delete post</a>
-	</form>
+  <form class="main form page">
+    <div class="form-group {{errorClass 'url'}}">
+      <label class="control-label" for="url">URL</label>
+      <div class="controls">
+          <input name="url" id="url" type="text" value="{{url}}" placeholder="Your URL" class="form-control"/>
+          <span class="help-block">{{errorMessage 'url'}}</span>
+      </div>
+    </div>
+    <div class="form-group {{errorClass 'title'}}">
+      <label class="control-label" for="title">Title</label>
+      <div class="controls">
+          <input name="title" id="title" type="text" value="{{title}}" placeholder="Name your post" class="form-control"/>
+          <span class="help-block">{{errorMessage 'title'}}</span>
+      </div>
+    </div>
+    <input type="submit" value="Submit" class="btn btn-primary submit"/>
+    <hr/>
+    <a class="btn btn-danger delete" href="#">Delete post</a>
+  </form>
 </template>
